// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`last should select the last entity: 2 calls 1`] = `undefined`;

exports[`last should select the last entity: 2 calls 2`] = `
Object {
  "completed": false,
  "id": 2,
  "title": "todo 2",
}
`;

exports[`last should select the last entity: 2 calls 3`] = `
Object {
  "completed": false,
  "id": 3,
  "title": "todo 3",
}
`;

exports[`last should support ref: 2 calls 1`] = `undefined`;

exports[`last should support ref: 2 calls 2`] = `
Object {
  "id": 2,
  "open": false,
}
`;
